Added feature to view weather forecast via web page using mustache with Spring Boot: - Add html file - Update Readme file to reflect new feature added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 weather.api.key=98854f2e51aa338be6dd0799484fdf91
 logging.file.path=logs
 logging.file.name= ${logging.file.path}/WeatherProj.log
+
+spring.mustache.prefix=classpath:/templates/
+spring.mustache.suffix=.html
