Enhanced security for project using JDBC authentication with role (USER, ADMIN) checked for API level and Bcrypt hashed password, removed in-memory authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,9 @@ logging.file.name= ${logging.file.path}/WeatherProj.log
 
 spring.mustache.prefix=classpath:/templates/
 spring.mustache.suffix=.html
+
+spring.datasource.url=jdbc:mysql://localhost:3306/weatherforecast
+spring.datasource.username=root
+spring.datasource.password=root1234@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=none
